test/error/sema/struct-field-default-type-mismatch.dsk
struct S
    x: int = "hello"
end

let s = S()
